--- a/index.html
+++ b/index.html
@@ -24,27 +24,6 @@
             --border-color-hover: #666;
         }
 
-        .g-button {
-            height: var(--button-height);
-            font-size: var(--font-size);
-            padding: 0 1em;
-            border-radius: var(--border-radius);
-            border: 1px solid var(--border-color);
-            background: var(--button-bg);
-        }
-
-        .g-button:hover {
-            border: 1px solid var(--border-color-hover);
-        }
-
-        .g-button:active {
-            background: var(--button-active-bg);
-        }
-
-        .g-button:focus {
-            outline: none;
-        }
-
         #app {
             margin: 80px auto;
         }
@@ -54,12 +33,7 @@
 <div id="app">
     <g-button></g-button>
 </div>
-<script src="./node_modules/vue/dist/vue.min.js"></script>
-<script src="./button.js"></script>
-<script>
-    new Vue({
-        el: '#app'
-    })
+<script src="./src/app.js">
 </script>
 </body>
 </html>
