添加icon和icon-position属性

--- a/index.html
+++ b/index.html
@@ -27,13 +27,23 @@
         #app {
             margin: 80px auto;
         }
+
+        .icon {
+            width: 1em;
+            height: 1em;
+            vertical-align: -0.15em;
+            fill: currentColor;
+            overflow: hidden;
+        }
     </style>
 </head>
 <body>
 <div id="app">
-    <g-button></g-button>
+    <g-button>按钮</g-button>
+    <g-button icon="left">按钮</g-button>
+    <g-button icon="right" icon-position="right">按钮</g-button>
 </div>
-<script src="./src/app.js">
-</script>
+<script src="./src/app.js"></script>
+<script src="//at.alicdn.com/t/font_1442680_n52pc19frrf.js"></script>
 </body>
 </html>
