--- a/index.html
+++ b/index.html
@@ -27,14 +27,6 @@
         #app {
             margin: 80px auto;
         }
-
-        .icon {
-            width: 1em;
-            height: 1em;
-            vertical-align: -0.15em;
-            fill: currentColor;
-            overflow: hidden;
-        }
     </style>
 </head>
 <body>
@@ -42,6 +34,7 @@
     <g-button>按钮</g-button>
     <g-button icon="left">按钮</g-button>
     <g-button icon="right" icon-position="right">按钮</g-button>
+    <g-icon name="download"></g-icon>
 </div>
 <script src="./src/app.js"></script>
 <script src="//at.alicdn.com/t/font_1442680_n52pc19frrf.js"></script>
