--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <body>
 <div id="app">
     <g-button>按钮</g-button>
-    <g-button icon="left">按钮</g-button>
+    <g-button icon="left" @click="loading1 = !loading1" :loading="loading1">按钮</g-button>
     <g-button icon="right" icon-position="right">按钮</g-button>
-    <g-icon name="download"></g-icon>
+    <!--<g-icon name="download"></g-icon>-->v
 </div>
 <script src="./src/app.js"></script>
 <script src="//at.alicdn.com/t/font_1442680_2zobapvertr.js"></script>
