完成 g-button-group 组件

--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
     <g-button>按钮</g-button>
     <g-button icon="left" @click="loading1 = !loading1" :loading="loading1">按钮</g-button>
     <g-button icon="right" icon-position="right">按钮</g-button>
-    <!--<g-icon name="download"></g-icon>-->v
+    <!--<g-icon name="download"></g-icon>-->
+    <g-button-group>
+        <g-button icon="left" icon-position="left">上一页</g-button>
+        <g-button>更多</g-button>
+        <g-button icon="right" icon-position="right">下一页</g-button>
+    </g-button-group>
 </div>
 <script src="./src/app.js"></script>
 <script src="//at.alicdn.com/t/font_1442680_2zobapvertr.js"></script>
