--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <g-button icon="right" icon-position="right">下一页</g-button>
     </g-button-group>
 </div>
+<div id="test"></div>
 <script src="./src/app.js"></script>
 <script src="//at.alicdn.com/t/font_1442680_2zobapvertr.js"></script>
 </body>
